made header and footer navbars background solid to prevent overlapping text

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,13 +15,18 @@ h1, h2, h3, h4, h5 {
 }
 
 .readme {
-    bottom: 1%;
+    bottom: 44px;
     right: 1%;
     position: fixed;
     color: #E8EAFC;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-shadow: 2px 2px #000;
     text-decoration: none;
+    background-color: #290638;
+
+    border: 1px solid #E8EAFC;
+    border-radius: 10%;
+    padding: 1px 2px;
 }
 
 .howtouse {
@@ -29,35 +34,40 @@ h1, h2, h3, h4, h5 {
     margin: 5%;
 }
 
-footer {
-    bottom: 1%;
-    left: 1%;
-    position: fixed;
-    color: #E8EAFC;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-shadow: 2px 2px #000;
-}
-
 .navbar {
     position: fixed;
-    top: 2%;
+    top: 0;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     text-shadow: 2px 2px #000;
+    background-color: #290638;
 }
 .navbar a {
     margin-left: auto;
     margin-right: auto;
     border: 1px solid #E8EAFC;
     border-radius: 10%;
-    padding: 2px 2px;
+    padding: 2px 3px;
     margin: 2%;
     box-shadow: 0px 3px 6px #000;
 
     background-color: #332a38;
     text-align: center;
     text-decoration: none;
+}
+
+footer {
+    bottom: 0;
+    left: 1%;
+    width: 100%;
+    margin: 0;
+    padding: 10px;
+    position: fixed;
+    color: #E8EAFC;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-shadow: 2px 2px #000;
+    background-color: #290638;
 }
 
 .input_box {
